<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.marketplace.search</groupId>
  <artifactId>search-system</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Search System</name>
  <description>Sistema de busca escalável para marketplace com arquitetura hexagonal</description>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!-- Spring Boot -->
    <spring-boot.version>3.2.0</spring-boot.version>

    <!-- Documentation -->
    <springdoc-openapi.version>2.3.0</springdoc-openapi.version>

    <!-- Testing -->
    <junit.version>5.10.1</junit.version>
    <testcontainers.version>1.19.3</testcontainers.version>
    <mockito.version>5.8.0</mockito.version>

    <!-- Libraries -->
    <elasticsearch.version>8.11.3</elasticsearch.version>
    <kafka.version>3.6.1</kafka.version>
    <redis.version>4.4.6</redis.version>
    <micrometer.version>1.12.1</micrometer.version>
    <logstash-logback.version>7.4</logstash-logback.version>
    <resilience4j.version>2.1.0</resilience4j.version>

    <!-- Maven Plugins -->
    <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
    <jacoco-maven-plugin.version>0.8.11</jacoco-maven-plugin.version>
    <spotbugs-maven-plugin.version>4.8.2.0</spotbugs-maven-plugin.version>
  </properties>

  <modules>
    <module>domain</module>
    <module>application</module>
    <module>infrastructure</module>
    <module>interfaces</module>
    <module>bootstrap</module>
    <module>catalog-service</module>
    <module>indexing-service</module>
    <module>search-service</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- Spring Boot BOM -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Internal Modules -->
      <dependency>
        <groupId>com.marketplace.search</groupId>
        <artifactId>domain</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.marketplace.search</groupId>
        <artifactId>application</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.marketplace.search</groupId>
        <artifactId>infrastructure</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.marketplace.search</groupId>
        <artifactId>interfaces</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.marketplace.search</groupId>
        <artifactId>bootstrap</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.marketplace.search.catalog</groupId>
        <artifactId>catalog-service</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.marketplace.search.indexing</groupId>
        <artifactId>indexing-service</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>com.marketplace.search.search</groupId>
        <artifactId>search-service</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- OpenAPI Documentation -->
      <dependency>
        <groupId>org.springdoc</groupId>
        <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        <version>${springdoc-openapi.version}</version>
      </dependency>

      <!-- Elasticsearch -->
      <dependency>
        <groupId>co.elastic.clients</groupId>
        <artifactId>elasticsearch-java</artifactId>
        <version>${elasticsearch.version}</version>
      </dependency>

      <!-- Kafka -->
      <dependency>
        <groupId>org.apache.kafka</groupId>
        <artifactId>kafka-clients</artifactId>
        <version>${kafka.version}</version>
      </dependency>

      <!-- Redis -->
      <dependency>
        <groupId>redis.clients</groupId>
        <artifactId>jedis</artifactId>
        <version>${redis.version}</version>
      </dependency>

      <!-- Resilience4j -->
      <dependency>
        <groupId>io.github.resilience4j</groupId>
        <artifactId>resilience4j-spring-boot3</artifactId>
        <version>${resilience4j.version}</version>
      </dependency>

      <dependency>
        <groupId>io.github.resilience4j</groupId>
        <artifactId>resilience4j-reactor</artifactId>
        <version>${resilience4j.version}</version>
      </dependency>

      <!-- Monitoring -->
      <dependency>
        <groupId>io.micrometer</groupId>
        <artifactId>micrometer-core</artifactId>
        <version>${micrometer.version}</version>
      </dependency>

      <!-- Logging -->
      <dependency>
        <groupId>net.logstash.logback</groupId>
        <artifactId>logstash-logback-encoder</artifactId>
        <version>${logstash-logback.version}</version>
      </dependency>

      <!-- Testing -->
      <dependency>
        <groupId>org.testcontainers</groupId>
        <artifactId>testcontainers-bom</artifactId>
        <version>${testcontainers.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <dependency>
        <groupId>me.paulschwarz</groupId>
        <artifactId>spring-dotenv</artifactId>
        <version>3.0.0</version>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
            <parameters>true</parameters>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
        </plugin>

        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>org.jacoco</groupId>
          <artifactId>jacoco-maven-plugin</artifactId>
          <version>${jacoco-maven-plugin.version}</version>
        </plugin>

        <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>${spotbugs-maven-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>test</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>quality</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-maven-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>